[package]
name = "peroxide"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["Document", "Window", "HtmlInputElement", "HtmlButtonElement", "EventTarget", "KeyboardEvent", "MouseEvent", "Node", "Element", "HtmlElement"] }
