[package]
name = "peroxide"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["Document", "Element", "HtmlButtonElement", "HtmlDivElement", "HtmlInputElement", "HtmlTextAreaElement", "MessageEvent", "RtcConfiguration", "RtcDataChannel", "RtcDataChannelEvent", "RtcIceCandidate", "RtcPeerConnection", "RtcPeerConnectionIceEvent", "RtcSessionDescriptionInit"] }
