[package]
name = "peroxide"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
console_error_panic_hook = "0.1.7"
flate2 = "1.1.0"
futures = "0.3.31"
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["console", "Window", "Document", "Element", "HtmlButtonElement", "HtmlDivElement", "HtmlInputElement", "HtmlTextAreaElement", "MessageEvent", "RtcConfiguration", "RtcDataChannel", "RtcDataChannelEvent", "RtcIceCandidate", "RtcPeerConnection", "RtcPeerConnectionIceEvent", "RtcSessionDescriptionInit", "MouseEvent", "HtmlElement", "Node", "HtmlHeadElement", "RtcDataChannelState", "RtcIceServer", "RtcIceConnectionState", "RtcSessionDescription", "RtcPeerConnectionState", "RtcDataChannelInit" ] }
